[project]
name = "ectools"
version = "0.0.1"

description = "eclectic tools for various tasks"
authors = [{ name = "Chih-chan Tien", email = "chihchan.tien@gmail.com" }]
license = { file = "LICENSE" }
readme = "README.md"
classifiers = [
  "Programming Language :: Python :: 3",
  "License :: OSI Approved :: MIT License",
  "Operating System :: OS Independent",
]

requires-python = ">=3.13"
dependencies = [
  # data
  "dacite",
  "omegaconf",
  "phx-class-registry",
  "pyyaml",
  "orjson",
  "frozendict",
  # formatting
  "rich",
  "wadler_lindig",
  # programming
  "plum-dispatch",
  "cytoolz",
]

[dependency-groups]
nnettracking = ["wandb"]
numerics = ["numpy", "scipy", "scipy-stubs", "jax[cuda13]", "jaxtyping"]
tabulation = ["pandas", "polars"]
data = ["dacite", "omegaconf", "phx-class-registry", "pyyaml", "orjson", "frozendict"]
formatting = ["rich", "wadler_lindig"]
programming = ["plum-dispatch", "cytoolz"]
development = ["toolz"]
building = ["hatchling"]
dev = [
  { include-group = "nnettracking" },
  { include-group = "numerics" },
  { include-group = "tabulation" },
  { include-group = "data" },
  { include-group = "formatting" },
  { include-group = "programming" },
  { include-group = "development" },
  { include-group = "building" },
]

[project.urls]
"Homepage" = "https://github.com/cctien/ectools"
"Repository" = "https://github.com/cctien/ectools"
"Bug Tracker" = "https://github.com/cctien/ectools/issues"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/ectools"]
